Local authentication was added

--- a/GitHub/GitHub/Supporting Files/Info.plist
+++ b/GitHub/GitHub/Supporting Files/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Используйте лицо для быстрого доступа к приложению!</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
